@@ -1,5 +1,5 @@
 /*
- * File: 
+ * File: condvar6.c
  *
  *
  * --------------------------------------------------------------------------
