@@ -1,5 +1,5 @@
 /*
- * File: errn1.c
+ * File: errno1.c
  *
  *
  * --------------------------------------------------------------------------
